[package]
name = "csf"
version = "0.1.1"
edition = "2021"
authors = ["Hongping <hongping1224@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whitebox_lidar = {git = "https://github.com/jblindsay/whitebox-tools.git", package = "whitebox_lidar"}
queues = "1.0.2"
nalgebra = "*"
rayon ="*"
libm ="*"
glob ="0.3.1"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "csf_bench"
harness = false